--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port={{PORT}} || 8056
+server.port={{PORT}}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.datasource.url=jdbc:mysql://{{DB_URL}}/nibss_easy_pay_api?serverTimezone=UTC&useSSL=false
