--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port={{PORT}}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.datasource.url=jdbc:mysql://{{DB_URL}}/nibss_easy_pay_api?serverTimezone=UTC&useSSL=false
-spring.datasource.username={{DB_USERNAME}}
-spring.datasource.password={{DB_PASSWORD}}
+spring.datasource.username={{DB_USER}}
+spring.datasource.password={{DB_PASS}}
 spring.profiles.active={{ENV}}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
