--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,13 +12,14 @@ maven_image_dev:
   extends: .maven_build
   environment:
     name: development
-  before_script:
-    - git clone https://$GIT_USER:$GIT_TOKEN@gitlab.com/Flutterwavego/devops/argocd.git
+  script:
     - sed -i "s/{{DB_URL}}/$DB_URL/g" src/main/resources/application.properties
     - sed -i "s/{{DB_USER}}/$DB_USER/g" src/main/resources/application.properties
     - sed -i "s/{{DB_PASS}}/$DB_PASS/g" src/main/resources/application.properties
     - sed -i "s/{{MAVEN}}/$MAVEN/g" src/main/resources/application.properties
     - sed -i "s/{{ENV}}/$ENV/g" src/main/resources/application.properties
+    - "mvn $MAVEN_CLI_OPTS package -e -B -U -DskipTests"
+    - "mvn clean install -Dmaven.test.skip=true"
   only:
     - dev
    
@@ -27,13 +28,14 @@ maven_image_prod:
   extends: .maven_build
   environment:
     name: production
-  before_script:
-    - git clone https://$GIT_USER:$GIT_TOKEN@gitlab.com/Flutterwavego/devops/argocd.git
+  script:
     - sed -i "s/{{DB_URL}}/$DB_URL/g" src/main/resources/application.properties
     - sed -i "s/{{DB_USER}}/$DB_USER/g" src/main/resources/application.properties
     - sed -i "s/{{DB_PASS}}/$DB_PASS/g" src/main/resources/application.properties
     - sed -i "s/{{MAVEN}}/$MAVEN/g" src/main/resources/application.properties
     - sed -i "s/{{ENV}}/$ENV/g" src/main/resources/application.properties
+    - "mvn $MAVEN_CLI_OPTS package -e -B -U -DskipTests"
+    - "mvn clean install -Dmaven.test.skip=true"
   only:
     - main
   
