--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,14 +4,14 @@ include:
 
 variables:
   MAVEN_CLI_OPTS: " --batch-mode"
-  
+
 stages:
   - maven
   - build
   - deploy
 
 ## This section will install maven and create the path for depolymnet
-maven_image_dev:
+maven_build_dev:
   extends: .maven_build
   environment:
     name: development
@@ -28,18 +28,19 @@ maven_image_dev:
     - dev
    
 # #This section will install maven and create the path for production
-maven_image_prod:
+maven_build_prod:
   extends: .maven_build
   environment:
     name: production
-  script:
+  before_script:
+    - git clone https://$GIT_USER:$GIT_TOKEN@gitlab.com/Flutterwavego/devops/argocd.git
     - sed -i "s/{{DB_URL}}/$DB_URL/g" src/main/resources/application.properties
     - sed -i "s/{{DB_USER}}/$DB_USER/g" src/main/resources/application.properties
     - sed -i "s/{{DB_PASS}}/$DB_PASS/g" src/main/resources/application.properties
     - sed -i "s/{{MAVEN}}/$MAVEN/g" src/main/resources/application.properties
     - sed -i "s/{{ENV}}/$ENV/g" src/main/resources/application.properties
-    - "mvn $MAVEN_CLI_OPTS package -e -B -U -DskipTests"
-    - "mvn clean install -Dmaven.test.skip=true"
+  after_script:
+    - cp argocd/add-ons/dd-java-agent.jar target
   only:
     - main
   
