--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 include:
   - project: "flutterwavego/devops/pipeline-template-definitions"
     file: "build.yml"
-    
+
 variables:
   MAVEN_CLI_OPTS: " --batch-mode"
 
@@ -21,6 +21,7 @@ maven_build_dev:
     - sed -i "s/{{DB_USER}}/$DB_USER/g" src/main/resources/application.properties
     - sed -i "s/{{DB_PASS}}/$DB_PASS/g" src/main/resources/application.properties
     - sed -i "s/{{MAVEN}}/$MAVEN/g" src/main/resources/application.properties
+    - sed -i "s/{{PORT}}/$PORT/g" src/main/resources/application.properties
     - sed -i "s/{{ENV}}/$ENV/g" src/main/resources/application.properties
   after_script:
     - cp argocd/add-ons/dd-java-agent.jar target
@@ -38,6 +39,7 @@ maven_build_prod:
     - sed -i "s/{{DB_USER}}/$DB_USER/g" src/main/resources/application.properties
     - sed -i "s/{{DB_PASS}}/$DB_PASS/g" src/main/resources/application.properties
     - sed -i "s/{{MAVEN}}/$MAVEN/g" src/main/resources/application.properties
+    - sed -i "s/{{PORT}}/$PORT/g" src/main/resources/application.properties
     - sed -i "s/{{ENV}}/$ENV/g" src/main/resources/application.properties
   after_script:
     - cp argocd/add-ons/dd-java-agent.jar target
