--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ maven_build_dev:
     - sed -i "s/{{MAVEN}}/$MAVEN/g" src/main/resources/application.properties
     - sed -i "s/{{PORT}}/$PORT/g" src/main/resources/application.properties
     - sed -i "s/{{ENV}}/$ENV/g" src/main/resources/application.properties
-    - sed -i "s/{{AUTH_ISSUER}}/$AUTH_ISSUER/g" src/main/resources/application.properties
+    - sed -i "#/{{AUTH_ISSUER}}/$AUTH_ISSUER/g" src/main/resources/application.properties
     - sed -i "s/{{AUTH_EXPIRY}}/$AUTH_EXPIRY/g" src/main/resources/application.properties
   after_script:
     - cp argocd/add-ons/dd-java-agent.jar target
@@ -43,7 +43,7 @@ maven_build_prod:
     - sed -i "s/{{MAVEN}}/$MAVEN/g" src/main/resources/application.properties
     - sed -i "s/{{PORT}}/$PORT/g" src/main/resources/application.properties
     - sed -i "s/{{ENV}}/$ENV/g" src/main/resources/application.properties
-    - sed -i "s/{{AUTH_ISSUER}}/$AUTH_ISSUER/g" src/main/resources/application.properties
+    - sed -i "#/{{AUTH_ISSUER}}/$AUTH_ISSUER/g" src/main/resources/application.properties
     - sed -i "s/{{AUTH_EXPIRY}}/$AUTH_EXPIRY/g" src/main/resources/application.properties
   after_script:
     - cp argocd/add-ons/dd-java-agent.jar target
