--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ build/
 
 /src/main/resources/application.example.properties
 /src/main/resources/application.properties
+/src/main/resources/application.local.properties
