--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,19 @@
-server.port=8090
+server.port={{PORT}}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-
-spring.datasource.url=jdbc:mysql://localhost:8889/nibss_easy_pay_api?serverTimezone=UTC&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
-spring.profiles.active=local
+spring.datasource.url=jdbc:mysql://{{DB_URL}}/nibss_easy_pay_api?serverTimezone=UTC&useSSL=false
+spring.datasource.username={{DB_USER}}
+spring.datasource.password={{DB_PASS}}
+spring.profiles.active={{ENV}}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jackson.deserialization.fail-on-unknown-properties=false
-auth.issuer={{AUTH_ISSUER}}
-auth.expiry={{AUTH_EXPIRY}}
 
 #Rollbar
 rollbar.enabled=false
 app.environment=local
 rollbar.access_token=rollbarTOken
-maven=qvr3.tsKX}5yj:}D
 
-app.id=1df73054-1d24-11ec-union-9621-0242ac130002
-
-auth.issuer=https://fluterwavedev.com
-auth.expiry=3600000
+#jasypt
+MAVEN={{MAVEN}}
+app.id=1df73054-1d24-11ec-union-9621-nibsseasypay
