added manadate management

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ rollbar.access_token=rollbarTOken
 #jasypt
 MAVEN={{MAVEN}}
 app.id=1df73054-1d24-11ec-union-9621-nibsseasypay
+
+auth.issuer=https://fluterwavedev.com
+auth.expiry=3600000
+
