remove stout loging and addd sensitive data masking

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ build/
 .vscode/
 
 /logs/
+/DEV_HOME_IS_UNDEFINED/
 
 /src/main/resources/application.example.properties
 /src/main/resources/application.properties
