--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,14 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jackson.deserialization.fail-on-unknown-properties=false
 
+spring.datasource.hikari.connectionTimeout=120000
+spring.datasource.hikari.idleTimeout=12000
+spring.datasource.hikari.maxLifetime=60000
+spring.datasource.hikari.minimumIdle=5
+spring.datasource.hikari.minimumPoolSize=200
+spring.datasource.hikari.maximumPoolSize=300
+spring.datasource.hikari.keepaliveTime=3200
+
 #Rollbar
 rollbar.enabled=false
 app.environment=local
@@ -20,4 +28,3 @@ app.id=1df73054-1d24-11ec-union-9621-nibsseasypay
 
 auth.issuer=https://fluterwavedev.com
 auth.expiry=3600000
-
